fix the jumping buttons in wide windows
#article-head needs a max-width so it doesn't expand too far once it loses it's wrapper.

--- a/media/css/wiki-screen.css
+++ b/media/css/wiki-screen.css
@@ -142,7 +142,7 @@ div.tip { margin-bottom: 1.286em; border: 1px solid #e1f5f0; border-width: 1px 0
 div.note p, div.tip p { margin-bottom: .75em; }
 
 /* @Page @Title and @Buttons *********/
-#article-head { position: relative; clear: both; padding-top: 20px; margin-top: -19px; background: #f6f6f1 url("../img/bg-content.png") fixed; }
+#article-head { position: relative; clear: both; max-width: 1200px; padding-top: 20px; margin-top: -19px; background: #f6f6f1 url("../img/bg-content.png") fixed; }
 #article-head:after { content: "."; display: block; clear: both; height: 0; visibility: hidden; }
 
 .title { position: relative; }
